force-app/main/default/objects/Transaction__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Paid by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Rents</relationshipName>
    <type>Lookup</type>
</CustomField>