force-app/main/default/objects/Transaction__c/fields/RefNo__c.field-meta.xml
<CustomField>
    <fullName>RefNo__c</fullName>
    <label>RefNo</label>
    <length>25</length>
    <type>Text</type>
</CustomField>