force-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Rent_Amount__c</columns>
    <columns>UPI_ID__c</columns>
    <columns>Contact__c</columns>
    <columns>Payment_Mode__c</columns>
    <columns>Paid_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <columns>RefNo__c</columns>
    <columns>BankAccount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>